examples/failing/TypeSynonyms5.purs
module Main where

type T = T
